--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+* {
+    box-sizing: border-box;
+    margin: 0; 
+    padding: 0;
+    border: 0;
+    overflow-x: hidden;
+  }
+  
+  /* Lists */
+  
+  ul, ol, dl {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  /* Links */
+  
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  /* Forms */
+  
+  input, textarea, select {
+    margin: 0;
+    padding: 0;
+    border: none;
+    font-size: 100%;
+    font-family: inherit;
+  }
+  
+  /* Images */
+  
+  img {
+    border: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  
+  
+  button::-moz-focus-inner,
+  input::-moz-focus-inner {
+    border: 0;
+    padding: 0;
+  }
